--- a/_posts/2025-01-25-owl-ViT.md
+++ b/_posts/2025-01-25-owl-ViT.md
@@ -5,6 +5,8 @@ title: OWL-ViT - Open-Vocabulary Object Detection
 author: Shaodong Wang
 ---
 
+This is my learning notes for the OWL-ViT (v1 & v2) model. When I first read their paper, I mixed the OWL up with some parts of DETR. Note my past confusion here.
+
 Object detection has traditionally been limited to fixed-category models, where detectors are trained to recognize a predefined set of objects. However, real-world applications demand open-vocabulary detection, where a model can identify objects it has never explicitly seen during training. OWL-ViT (Open-World Localization with Vision Transformers) is a step toward this goal, leveraging Vision Transformers (ViT) and contrastive learning to create a scalable and simple detection model that works with natural language queries.
 
 ## Model Architecture
@@ -48,3 +50,7 @@ Since OWL-ViT avoids object queries and a Transformer decoder, it is simpler and
 OWL-ViT offers a simple and effective way to adapt Vision Transformers for open-vocabulary object detection. By leveraging contrastive pretraining, it generalizes to novel objects using text-based queries, making it useful for real-world applications where a predefined object list is impractical. Unlike DETR, which relies on object queries and a decoder, OWL-ViT’s one-token-per-object structure provides a clear and interpretable alignment between tokens and detections.
 
 However, OWL-ViT is not a complete replacement for query-based models like DETR. DETR’s approach allows more flexibility, especially in complex images with overlapping objects. OWL-ViT, on the other hand, benefits from its modular and scalable design, making it an excellent baseline for open-vocabulary detection with transformers.
+
+
+## References
+\[1\] Minderer, M., Gritsenko, A., Stone, A., Neumann, M., Weissenborn, D., Dosovitskiy, A., ... & Houlsby, N. (2022, October). Simple open-vocabulary object detection. In European Conference on Computer Vision (pp. 728-755). Cham: Springer Nature Switzerland. https://arxiv.org/abs/2205.06230
