--- a/_posts/2025-01-25-owl-ViT.md
+++ b/_posts/2025-01-25-owl-ViT.md
@@ -20,19 +20,21 @@ Each ViT token corresponds to a candidate object. If the ViT encoder outputs 256
 ## Training Methods
 The key to OWL-ViT’s generalization lies in its two-stage training strategy:
 
-- Contrastive Pretraining on Large-Scale Image-Text Data
+- **Contrastive Pretraining on Large-Scale Image-Text Data.**
 The model learns to associate images and text descriptions through contrastive learning, similar to CLIP. This step enables it to understand a broad range of visual concepts, even for objects not explicitly labeled in detection datasets.
-Detection Fine-Tuning with Open-Vocabulary Classification
+- **Detection Fine-Tuning with Open-Vocabulary Classification.**
 Instead of classifying objects into a fixed set of categories, the model learns to compare detections with text embeddings. This enables the model to generalize beyond a closed vocabulary—users can query it with free-form text, such as “a golden retriever” or “a red sports car,” and it will find relevant objects.
-- At inference time, the model does not require a fixed set of class labels; instead, it dynamically matches detected objects to the provided text queries.
+
+At inference time, the model does **not require a fixed set of class labels**; instead, it dynamically matches detected objects to the provided text queries.
 
 ## How OWL-ViT Aligns Bounding Boxes and Object Labels
-A crucial aspect of OWL-ViT’s design is how it ensures that bounding boxes and classification labels refer to the same object. Since each ViT token represents a spatial region, the same token is used:
+A crucial aspect of OWL-ViT’s design is **how it ensures that bounding boxes and classification labels refer to the same object**. Since each ViT token represents a spatial region, the same token is used:
 
-By the MLP head to predict a bounding box.
-By the linear projection layer to compute a classification score.
+- By the MLP head to predict a bounding box.
+- By the linear projection layer to compute a classification score.
+
 This creates a one-to-one alignment between bounding boxes and labels:
-The first ViT token produces the first object candidate, the second token produces the second, and so on. There is no separate object proposal step, making the pipeline straightforward and computationally efficient.
+The first ViT token produces the first object candidate, the second token produces the second, and so on. There is **no separate object proposal step**, making the pipeline straightforward and computationally efficient.
 
 ## Comparing OWL-ViT and DETR
 OWL-ViT might seem similar to DETR (Detection Transformer) since both use transformers for object detection, but they have fundamental differences.
